--- a/list.man
+++ b/list.man
@@ -15,82 +15,50 @@ cc [
 .nf
 .PP
 .ft B
+\#include <stdint.h>
+\#include <stddef.h>
 \#include <list.h>
 .PP
 .ft B
-LIST *list_init()
+typedef void (*list_deallocator_t)(void *data);
+typedef list_boolean_t (*list_comparator_t)(void *userdata, void *listdata); 
 .PP
 .ft B
-LIST *list_mvprev(list)
-    LIST *list;
+LIST *list_create()
+void list_destroy(LIST *list, list_deallocator_t func);
 .PP
 .ft B
-LIST *list_mvnext(list)
-    LIST *list;
+uint32_t list_size(LIST *list);
+list_boolean_t int list_empty(LIST *list);
 .PP
 .ft B
-LIST *list_mvfront(list)
-    LIST *list;
+void *list_front(LIST *list);
+void *list_curr(LIST *list);
+void *list_rear(LIST *list);
 .PP
 .ft B
-LIST *list_mvrear(list)
-    LIST *list;
+LIST_ELEMENT *list_element_front(LIST *list);
+LIST_ELEMENT *list_element_curr(LIST *list);
+LIST_ELEMENT *list_element_rear(LIST *list);
 .PP
 .ft B
-char *list_front(list)
-    LIST *list;
+LIST *list_mvprev(LIST *list);
+LIST *list_mvnext(LIST *list);
+LIST *list_mvfront(LIST *list);
+LIST *list_mvrear(LIST *list);
+LIST *list_setcurr(LIST *list, LIST_ELEMENT *element);
 .PP
 .ft B
-char *list_curr(list)
-    LIST *list;
+void *list_insert_before(LIST *list, void *data, size_t bytes);
+void *list_insert_after(LIST *list, void *data, size_t bytes);
 .PP
 .ft B
-char *list_rear(list)
-    LIST *list;
+void *list_remove_front(LIST *list);
+void *list_remove_curr(LIST *list);
+void *list_remove_rear(LIST *list);
 .PP
 .ft B
-char *list_insert_before(list, data, bytes)
-    LIST *list;
-    char *data;
-    int bytes;
-.PP
-.ft B
-char *list_insert_after(list, data, bytes)
-    LIST *list;
-    char *data;
-    int bytes;
-.PP
-.ft B
-char *list_remove_front(list)
-    LIST *list;
-.PP
-.ft B
-char *list_remove_curr(list)
-    LIST *list;
-.PP
-.ft B
-char *list_remove_rear(list)
-    LIST *list;
-.PP
-.ft B
-int list_size(list)
-    LIST *list;
-.PP
-.ft B
-int list_empty(list)
-    LIST *list;
-.PP
-.ft B
-int list_traverse(list, data, func, opts)
-    LIST *list;
-    char *data;
-    int (*func)();
-    int opts;
-.PP
-.ft B
-void list_free(list, dealloc)
-    LIST *list;
-    void (*dealloc)();
+int list_traverse(LIST *list, void *userdata, list_comparator_t func, int opts);
 .PP
 .SH DESCRIPTION
 These routines provide generic manipulation of (potentially)
@@ -99,13 +67,56 @@ individual elements within a list varying in size.  It is the
 programmer's responsibility to account for such differences.
 
 Lists are referred to by variables declared as LIST *; the type LIST
-is defined in <list.h> to be a C structure.  Each descriptor maintains
-references to the front, rear, and current elements, as well as the
+is defined in <list.h> to be an opaque structure.  Internally each descriptor
+maintains references to the front, rear, and current elements, as well as the
 size (or length) of the list.  Various routines operate relative to the
 current element.
 .PP
-.IR list_init
-initializes and returns a list descriptor.
+.IR list_create
+creates and returns an opaque pointer to the list. This pointer is used for
+all subsequent list operations. 
+.PP
+.IR list_destroy
+destroys the 
+.IR list ,
+by deallocating the list applying the user-supplied function
+.IR list_deallocator_t
+.IR func
+to the data portion of each element remaining in the list.  If
+.IR func 
+is (void *)LIST_DEALLOC, then the package will apply its own deallocation
+routine.  This, however, should only be done if the package has been
+responsible for data element allocation, i.e., the insert routines
+have been invoked with
+.IR bytes
+greater than 0.  If
+.IR func
+is (void *)LIST_NODEALLOC, no per-element deallocation will be performed.
+.PP
+.IR list_size
+returns the size (or number of elements) of
+.IR list
+as an unsigned integer.
+.PP
+.IR list_empty
+returns 1 (LIST_TRUE) if
+.IR list
+is empty, 0 (LIST_FALSE) otherwise.
+.PP
+.IR list_front ,
+.IR list_curr ,
+and
+.IR list_rear 
+return pointers to the front, current, or rear element in
+.IR list .
+.PP
+.IR list_element_front ,
+.IR list_element_curr ,
+.IR list_element_rear ,
+return an opaque LIST_ELEMENT pointer.  This pointer can only be used to
+directly set the list curr pointer with
+.IR list_setcurr .
+Useful for keeping a back pointer to an array element to avoid list traversal. 
 .PP
 .IR list_mvprev ,
 .IR list_mvnext ,
@@ -115,16 +126,6 @@ move to the previous, next, front, or rear element in
 .IR list ,
 and return the modified list descriptor.  Movement previous or next is relative
 to the current element.
-.PP
-.IR list_front ,
-.IR list_curr ,
-and
-.IR list_rear 
-return pointers to the front, current, or rear element in
-.IR list . \c
-#ifdef USE_MACROS
-This routine is implemented as a macro. \c
-#endif
 .PP
 .IR list_insert_before
 and
@@ -157,50 +158,19 @@ the list, unless the element at the rear of the list was removed.  In this
 case, the current element is set to the previous element (prior to the
 remove).
 .PP
-.IR list_size
-returns the size (or number of elements) of
-.IR list
-as an integer. \c
-#ifdef USE_MACROS
-This routine is implemented as a macro. \c
-#endif
-.PP
-.IR list_empty
-returns 1 (TRUE) if
-.IR list
-is empty, 0 (FALSE) otherwise. \c
-#ifdef USE_MACROS
-This routine is implemented as a macro. \c
-#endif
-.PP
 .IR list_traverse
 traverses
 .IR list
-according to
+according to options 
 .IR opts ,
 calling
+.IR list_comparator_t
 .IR func
 at each element encountered in the traversal, until
 .IR func
 returns 0 (FALSE) or the extent of the list is reached.  This routine
 can be used to search for an item or print the contents of the list,
 for example.  See the section LIST TRAVERSAL for more information.
-.PP
-.IR list_free
-deallocates
-.IR list,
-applying the user-supplied function
-.IR dealloc
-to the data portion of each element remaining in the list.  If
-.IR dealloc
-is LIST_DEALLOC, then the package will apply its own deallocation
-routine.  This, however, should only be done if the package has been
-responsible for data element allocation, i.e., the insert routines
-have been invoked with
-.IR bytes
-greater than 0.  If
-.IR dealloc
-is LIST_NODEALLOC, no per-element deallocation will be performed.
 .SH LIST TRAVERSAL
 The behavior of the routine
 .IR list_traversal
@@ -215,14 +185,13 @@ parameter.
 should be declared as follows:
 .PP
 .RS
-int func(data, curr)
-    char *data;
-    char *curr;
+list_boolean_t func(void *userdata, void *listdata); 
 .RE
 .PP
-and should return 1 (TRUE) if the traversal should continue, or 0 (FALSE)
-if the traversal should terminate.  The function does not need to check
-if the extent of the list has been reached; the return code from
+and should return 1 (LIST_TRUE) if the traversal should continue, or 0
+(LIST_FALSE) if the traversal should terminate.  The function does not
+need to check if the extent of the list has been reached; the return code
+from
 .IR list_traverse
 will indicate the status of the traversal.  At each element encountered
 in the traversal,
@@ -230,46 +199,42 @@ in the traversal,
 will invoke
 .IR func ,
 passing it the two parameters
-.IR data
+.IR userdata
 and
-.IR curr ;
-.IR data
-being the data pointer sent to
-.IR list_traverse
-originally, and
-.IR curr
-being the data pointer of the current element in the traversal.  For example,
-by passing the following function to
+.IR listdata ;
+.IR userdata
+being the data pointer provided by the caller in the call to
+.IR list_traverse ,
+and
+.IR listdata
+being the data pointer of the current list element in the traversal.  \
+For example, by passing the following function to
 .IR list_traverse ,
 the contents of a list of names could be printed.
 .PP
 .RS
 .nf
-int func(data, curr)
-    char *data;
-    char *curr;
+list_boolean_t func(void *userdata, void *listdata)
 {
-    printf("Name=%30s.\\n", curr->name);
-    return(TRUE);
+    printf("Name=%30s.\\n", (char *)listdata->name);
+    return(LIST_TRUE);
 }
 .fi
 .RE
 .PP
 In this example, the parameter
-.IR data
-is ignored and the function unconditionally returns 1 (TRUE), but functions
+.IR userdata
+is ignored and the function unconditionally returns 1 (LIST_TRUE), but functions
 like
 .PP
 .RS
 .nf
-int func(data, curr)
-    char *data;
-    char *curr;
+list_boolean_t func(void *userdata, void *listdata)
 {
-    if (strcmp(data, curr))
-       return(TRUE);
+    if (strcmp((char *)userdata, (char *)listdata))
+       return(LIST_TRUE);
     else
-       return(FALSE);
+       return(LIST_FALSE);
 }
 .fi
 .RE
@@ -277,7 +242,7 @@ int func(data, curr)
 can be used to position the current element pointer prior to insertion, so
 as to keep the list ordered.  
 .PP
-The direction and scope of the traversal can be controlled by specifying
+The       direction and scope of the traversal can be controlled by specifying
 one or more of the following options:
 .PP
 .RS
@@ -286,14 +251,14 @@ one or more of the following options:
 LIST_FORW	*	traverse forward (next)
 LIST_BACK		traverse backwards (prev)
 LIST_FRNT	*	start from the front of the
-			list (implies LIST_FORW)
+		list (implies LIST_FORW)
 LIST_CURR		start from the current element
 LIST_REAR		start from the rear element
-			(implies LIST_BACK)
+		(implies LIST_BACK)
 LIST_SAVE	*	do not alter the current element
-			pointer during the traversal
+		pointer during the traversal
 LIST_ALTR		alter the current element pointer
-			during the traversal
+		during the traversal
 .fi
 .RE
 .PP
@@ -357,12 +322,11 @@ insert routines have been called with
 .IR bytes
 equal to 0, then the user must be responsible for storage deallocation
 as well.  A user-supplied deallocation function should be passed to
-.IR list_free
+.IR list_destroy
 for this purpose.  The deallocation function should be declared as:
 .PP
 .RS
-void dealloc(data)
-   char *data;
+void *func(void *data);
 .RE
 .PP
 and will be sent the data element reference of each element in the list
@@ -370,10 +334,10 @@ when
 .IR list_free
 is invoked.  If the package has been responsible for data element allocation,
 .IR list_free
-can be invoked with LIST_DEALLOC for
-.IR dealloc,;
+can be invoked with (VOID *)LIST_DEALLOC for
+.IR func,;
 the list package will apply its own deallocation routine, or
-LIST_NODEALLOC if no per-element deallocation is required.  It is the
+(void *)LIST_NODEALLOC if no per-element deallocation is required.  It is the
 programmer's responsibility to insure that the memory allocation
 policy is applied properly.
 .SH DIAGNOSTICS
@@ -421,3 +385,5 @@ its application here could be considered a bug.
 queue(3), stack(3), cache(3)
 .SH AUTHOR
 Bradley C. Spatz (bcs@ufl.edu), University of Florida.
+.PP
+Philip Kufeldt
